[ADD]quickbook_connector invoice status updation and sync to qb updation

--- a/odoo_quickbooks_connector/views/quickbooks_connector_view.xml
+++ b/odoo_quickbooks_connector/views/quickbooks_connector_view.xml
@@ -49,6 +49,14 @@
                                 <field name="quick_mode"/>
                             </group>
                         </group>
+                        <notebook>
+                            <page name="export_from_qb" string="Export From QB">
+                                <group>
+                                    <button name="action_export_invoice_status" string="Update Invoice Status"
+                                type="object" class="oe_highlight"/>
+                                </group>
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
             </field>
