--- a/odoo_quickbooks_connector/views/views.xml
+++ b/odoo_quickbooks_connector/views/views.xml
@@ -4,6 +4,10 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//button[@name='button_cancel']" position="after">
+                <button name="button_invoice_sync_qb" string="Sync to QB" class="oe_highlight" type="object" attrs="{'invisible':[('quickbook_id', '!=', 0)]}"/>
+<!--                <button name="button_invoice_status_sync_qb" string="Update Status in QB" class="oe_highlight" type="object" attrs="{'invisible':[('quickbook_id', '=', 0)]}"/>-->
+            </xpath>
             <xpath expr="//page[@name='other_info']" position="inside">
                 <group name="quick_details" string="Quickbook Details">
                     <field name="quickbook_id"/>
