--- a/odoo_quickbooks_connector/views/views.xml
+++ b/odoo_quickbooks_connector/views/views.xml
@@ -11,6 +11,7 @@
             <xpath expr="//page[@name='other_info']" position="inside">
                 <group name="quick_details" string="Quickbook Details">
                     <field name="quickbook_id"/>
+                    <field name="quick_memo"/>
                 </group>
             </xpath>
         </field>
