--- a/odoo_quickbooks_connector/views/sale_order.xml
+++ b/odoo_quickbooks_connector/views/sale_order.xml
@@ -8,7 +8,7 @@
                 <group name="quick_book_details" string="QuickBook Details">
 <!--                    <field name="quickbook_connector_id"/>-->
                     <field name="quickbook_id"/>
-                    <field name="quick_product_id"/>
+<!--                    <field name="quick_product_id"/>-->
                 </group>
             </xpath>
         </field>
