[UPDATE] invoice order line product as sale order number

--- a/odoo_quickbooks_connector/views/views.xml
+++ b/odoo_quickbooks_connector/views/views.xml
@@ -12,7 +12,7 @@
                 <group name="quick_details" string="Quickbook Details">
                     <field name="quickbook_id"/>
                     <field name="quick_memo"/>
-<!--                    <field name="quick_product_id"/>-->
+                    <field name="quick_product_id"/>
                 </group>
             </xpath>
         </field>
