[ADD]quickbook_report

--- a/odoo_quickbooks_connector/views/views.xml
+++ b/odoo_quickbooks_connector/views/views.xml
@@ -40,10 +40,20 @@
                     <group>
                         <group>
                             <field name="receiver"/>
-                            <field name="sale_count"/>
                             <field name="purchase_count"/>
                             <field name="invoice_count"/>
-<!--                            <button name="%(action_send_email_with_synced_report)" type="action" string="Send Report"/>-->
+                            <button name="send_email_with_synced_report" type="object" string="Send Report"/>
+                            <button name="print_reprt" type="object" string="Print Report"/>
+                        </group>
+                        <group>
+                            <field name="template_id"/>
+                            <field name="purchase_failed"/>
+                            <field name="invoice_failed"/>
+                            <field name="journal_count"/>
+                            <field name="journal_failed"/>
+<!--                            <field name="invoice_count"/>-->
+<!--                            <button name="send_email_with_synced_report" type="object" string="Send Report"/>-->
+<!--                            <button name="print_reprt" type="object" string="Print Report"/>-->
                         </group>
                     </group>
                 </page>
